# pg-stig-audit

./: .env.example  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  ROADMAP-PILOT-TO-REVENUE.md  SECURITY-HARDENING-REPORT.md  audit.py  pyproject.toml  runner.py
.github/workflows/: pg-audit.yml  release.yml  test.yml
checks/: __init__.py  auth.py  base.py  config.py  cve_scanner.py  logging.py  privileges.py
docs/: BEGINNER_GUIDE.md  CVE_SCANNING.md  PILOT_TESTER_HANDOFF.md  QUICKSTART.md  RELEASE_SUMMARY.md  RUN_BENCHMARK.md  V1_RELEASE_BOUNDARY.md  WIZ_SETUP.md
evidence/: release-readiness-scorecard-2026-02-25.md
evidence/latest/: control-trace.json  executive-summary.txt  manifest.json
evidence/pg-stig-audit Evidence Pack - 2026-02-25/01_Executive/: 01_Executive_Summary_pg-stig-audit_2026-02-25.md  02_Release_Readiness_Scorecard_2026-02-25.md  03_Claims_Language_Guide.md
evidence/pg-stig-audit Evidence Pack - 2026-02-25/02_Test_Results_Docker/: docker_run_log_2026-02-25.txt
evidence/pg-stig-audit Evidence Pack - 2026-02-25/03_Test_Results_Direct/: direct_environment_notes.md  direct_run_log_2026-02-25.txt
evidence/pg-stig-audit Evidence Pack - 2026-02-25/04_Test_Results_Kubernetes/: k8s_environment_notes.md  k8s_run_log_2026-02-25.txt
evidence/pg-stig-audit Evidence Pack - 2026-02-25/05_Remediation_and_Changes/: change_history_2026-02-25.md  (+1 more)
mappings/: frameworks.py
output/: bundle.py  report.py  sarif.py  wiz_scc.py
rego/: pg_audit.rego
scripts/: build_evidence_bundle.py  evidence_utils.py  export_for_opa.py  gen_remediation.py  make_fixture_delta_pack.py  push_to_scc.py  push_to_wiz.py
test/: Dockerfile.hardened  FIXTURE-STATUS.md  README.md  docker-compose.test.yml  run_tests.sh  test_checks.py
test/hardened-init/: 01-ssl-and-audit.sh
(+4 files in other folders)
